--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.115.6
 uvicorn[standard]==0.34.0
 openai==1.58.1
-deepgram-sdk==3.8.1
+deepgram-sdk>=3.0.0
 python-multipart==0.0.18
 websockets==14.1
